# little-raylib-shader-playground

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE
assets/shaders/: blinn_phong.frag  blinn_phong.vert  post_processing_template.frag
code-generator/: Cargo.toml
code-generator/cpp_parser/: Cargo.toml
code-generator/header/: hello.h
code-generator/src/: cmake_compile_commands.rs  cpp_parser.rs  lib.rs  main.rs
src/: camera.h  engine.cpp  engine.h  gui_helper.cpp  gui_helper.h  icon.cpp  icon.h  main.cpp  raylib_helper.h  raylib_types.h
src/ecs/: mod.h  resource.h
src/render/: light.h  mod.cpp  mod.h  post_processing.cpp  post_processing.h
src/ui/: gui_helper.cpp  gui_helper.h  icon.cpp  icon.h
src/utils/: singleton_macro.h
