[package]
name = "code-generator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clang = "2.0.0"
clang-sys = "1.8.1"
clap = { version = "4.5.53", features = ["derive"] }
color-backtrace = "0.7.2"
glob = "0.3.3"
json = "0.12.4"
regex = "1.12.2"
serde = "1.0.228"
walkdir = "2.5.0"
